Implement concrete repository and integrate it with dependecy injection

--- a/Angular7-WebAPI-Calendar/appsettings.json
+++ b/Angular7-WebAPI-Calendar/appsettings.json
@@ -1,8 +1,13 @@
 {
+  "ConnectionStrings": {
+    "MeetingsDatabase": "Server=(localdb)\\mssqllocaldb;Database=meetings;Trusted_Connection=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
