Repostory Tests: In memory database setup - wire up the repository with the fake context

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -123,7 +123,7 @@
     <Compile Include="FakeRepository.cs" />
     <Compile Include="IDataRepository.cs" />
     <Compile Include="Meeting.cs" />
-    <Compile Include="MyContext.cs" />
+    <Compile Include="AppDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
