--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Meeting.cs" />
     <Compile Include="AppDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeedData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
