--- a/Testing/Testing.csproj
+++ b/Testing/Testing.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Angular7-WebAPI-Calendar\Angular7-WebAPI-Calendar.csproj" />
     <ProjectReference Include="..\DAL\DAL.csproj" />
   </ItemGroup>
 
